--- a/contracts/nois-terrand/Cargo.toml
+++ b/contracts/nois-terrand/Cargo.toml
@@ -36,5 +36,9 @@ schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
 
+# Drand dependencies
+hex = { version = "0.4" }
+drand-verify = "0.1.0"
+
 [dev-dependencies]
 cosmwasm-schema = { version = "1.0.0" }
