CI config fixes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,10 @@
 version: 2.1
 
-orbs:
-  codecov: codecov/codecov@3.2.2
-
 workflows:
   version: 2
   test:
     jobs:
+      - contract_nois_demo
       - contract_nois_proxy
       - contract_nois_terrand
       - package_nois_ibc_protocol
@@ -17,14 +15,9 @@ workflows:
           requires:
             - wasm-build
             - ts-build
+            - contract_nois_demo
             - contract_nois_proxy
             - contract_nois_terrand
-#          filters:
-#            branches:
-#              only:
-#                # Long living branches
-#                - main
-#                # 👇Add your branch here if benchmarking matters to your work
   deploy:
     jobs:
       - build_and_upload_contracts:
@@ -41,9 +34,36 @@ workflows:
              ignore: /.*/
 
 jobs:
+  contract_nois_demo:
+    docker:
+      - image: rust:1.63.0
+    working_directory: ~/project/contracts/nois-demo
+    steps:
+      - checkout:
+          path: ~/project
+      - run:
+          name: Version information
+          command: rustc --version; cargo --version; rustup --version
+      - restore_cache:
+          keys:
+            - cargocache-nois-demo-rust:1.63.0-{{ checksum "~/project/Cargo.lock" }}
+      - run:
+          name: Unit Tests
+          environment:
+            RUST_BACKTRACE: 1
+          command: cargo unit-test --locked
+      - run:
+          name: Build and run schema generator
+          command: cargo schema --locked
+      - save_cache:
+          paths:
+            - /usr/local/cargo/registry
+            - target
+          key: cargocache-nois-demo-rust:1.63.0-{{ checksum "~/project/Cargo.lock" }}
+
   contract_nois_proxy:
     docker:
-      - image: rust:1.58.1
+      - image: rust:1.63.0
     working_directory: ~/project/contracts/nois-proxy
     steps:
       - checkout:
@@ -53,7 +73,7 @@ jobs:
           command: rustc --version; cargo --version; rustup --version
       - restore_cache:
           keys:
-            - cargocache-nois-proxy-rust:1.58.1-{{ checksum "~/project/Cargo.lock" }}
+            - cargocache-nois-proxy-rust:1.63.0-{{ checksum "~/project/Cargo.lock" }}
       - run:
           name: Unit Tests
           environment:
@@ -66,11 +86,11 @@ jobs:
           paths:
             - /usr/local/cargo/registry
             - target
-          key: cargocache-nois-proxy-rust:1.58.1-{{ checksum "~/project/Cargo.lock" }}
+          key: cargocache-nois-proxy-rust:1.63.0-{{ checksum "~/project/Cargo.lock" }}
 
   contract_nois_terrand:
     docker:
-      - image: rust:1.58.1
+      - image: rust:1.63.0
     working_directory: ~/project/contracts/nois-terrand
     steps:
       - checkout:
@@ -80,7 +100,7 @@ jobs:
           command: rustc --version; cargo --version; rustup --version
       - restore_cache:
           keys:
-            - cargocache-nois-terrand-rust:1.58.1-{{ checksum "~/project/Cargo.lock" }}
+            - cargocache-nois-terrand-rust:1.63.0-{{ checksum "~/project/Cargo.lock" }}
       - run:
           name: Unit Tests
           environment:
@@ -93,11 +113,11 @@ jobs:
           paths:
             - /usr/local/cargo/registry
             - target
-          key: cargocache-nois-terrand-rust:1.58.1-{{ checksum "~/project/Cargo.lock" }}
+          key: cargocache-nois-terrand-rust:1.63.0-{{ checksum "~/project/Cargo.lock" }}
 
   package_nois_ibc_protocol:
     docker:
-      - image: rust:1.58.1
+      - image: rust:1.63.0
     working_directory: ~/project/packages/nois-ibc-protocol
     steps:
       - checkout:
@@ -122,7 +142,7 @@ jobs:
 
   lint:
     docker:
-      - image: rust:1.58.1
+      - image: rust:1.63.0
     steps:
       - checkout
       - run:
@@ -130,7 +150,7 @@ jobs:
           command: rustc --version; cargo --version; rustup --version; rustup target list --installed
       - restore_cache:
           keys:
-            - cargocache-v2-lint-rust:1.58.1-{{ checksum "Cargo.lock" }}
+            - cargocache-v2-lint-rust:1.63.0-{{ checksum "Cargo.lock" }}
       - run:
           name: Add rustfmt component
           command: rustup component add rustfmt
@@ -149,7 +169,7 @@ jobs:
             - target/debug/.fingerprint
             - target/debug/build
             - target/debug/deps
-          key: cargocache-v2-lint-rust:1.58.1-{{ checksum "Cargo.lock" }}
+          key: cargocache-v2-lint-rust:1.63.0-{{ checksum "Cargo.lock" }}
 
   # This runs one time on the top level to ensure all contracts compile properly into wasm.
   # We don't run the wasm build per contract build, and then reuse a lot of the same dependencies, so this speeds up CI time
@@ -157,7 +177,7 @@ jobs:
   # Resulting wasm files are stored to the workspace, so they can be used by the integration test downstream
   wasm-build:
     docker:
-      - image: rust:1.58.1
+      - image: rust:1.63.0
     steps:
       - checkout:
           path: ~/project
@@ -166,7 +186,7 @@ jobs:
           command: rustc --version; cargo --version; rustup --version
       - restore_cache:
           keys:
-            - cargocache-wasm-rust:1.58.1-{{ checksum "~/project/Cargo.lock" }}
+            - cargocache-wasm-rust:1.63.0-{{ checksum "~/project/Cargo.lock" }}
       - run:
           name: Add wasm32 target
           command: rustup target add wasm32-unknown-unknown
@@ -182,11 +202,12 @@ jobs:
           paths:
             - /usr/local/cargo/registry
             - target
-          key: cargocache-wasm-rust:1.58.1-{{ checksum "~/project/Cargo.lock" }}
+          key: cargocache-wasm-rust:1.63.0-{{ checksum "~/project/Cargo.lock" }}
       - persist_to_workspace:
           name: Save wasm contracts for integration test usage
           root: ./target/wasm32-unknown-unknown/release
           paths:
+            - nois_demo.wasm
             - nois_proxy.wasm
             - nois_terrand.wasm
 
@@ -328,7 +349,7 @@ jobs:
 
   build_and_upload_schemas:
     docker:
-      - image: rust:1.58.1
+      - image: rust:1.63.0
     working_directory: ~/project
     steps:
       - checkout:
