--- a/contracts/nois-demo/Cargo.toml
+++ b/contracts/nois-demo/Cargo.toml
@@ -29,11 +29,10 @@ backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
 nois-proxy = { path = "../../contracts/nois-proxy", features = ["library"]}
+nois-toolbox = { path = "../../packages/nois-toolbox" }
 cosmwasm-std = { version = "1.0.0", features = ["iterator"] }
 cw-storage-plus = { version = "0.14.0" }
 hex = "0.4.3"
-rand_xoshiro = { version = "0.6.0", default-features = false }
-rand_core = { version = "0.6" }
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
