--- a/packages/nois-toolbox/Cargo.toml
+++ b/packages/nois-toolbox/Cargo.toml
@@ -11,6 +11,7 @@ schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
 rand_xoshiro = { version = "0.6.0", default-features = false }
+xxhash-rust = { version = "0.8.5", features = ["xxh3"] }
 
 # Deactivate default features in order to be able to use this on systems without
 # access to an entropy souce via getrandom such as wasm32-unknown-unknown
