--- a/packages/nois-ibc-protocol/Cargo.toml
+++ b/packages/nois-ibc-protocol/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 cosmwasm-std = { version = "1.0.0", features = ["ibc3"] }
+hex = "0.4"
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
