--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -327,7 +327,7 @@ jobs:
       - run:
           name: Build development contracts
           command: |
-            docker run --volumes-from with_code cosmwasm/workspace-optimizer:0.12.6
+            docker run --volumes-from with_code cosmwasm/workspace-optimizer:0.12.7
             docker cp with_code:/code/artifacts ./artifacts
       - run:
           name: Show data
@@ -339,7 +339,7 @@ jobs:
           command: |
             TAG="$CIRCLE_TAG"
             TITLE="$TAG"
-            BODY="Attached there are some build artifacts generated at this tag. Those are for development purposes only! Please use crates.io to find the packages of this release."
+            BODY="Attached there are some build artifacts generated at this tag."
             ghr -t "$GITHUB_TOKEN" \
               -u "$CIRCLE_PROJECT_USERNAME" -r "$CIRCLE_PROJECT_REPONAME" \
               -c "$CIRCLE_SHA1" \
