--- a/contracts/nois-proxy/Cargo.toml
+++ b/contracts/nois-proxy/Cargo.toml
@@ -30,7 +30,7 @@ backtraces = ["cosmwasm-std/backtraces"]
 library = []
 
 [dependencies]
-nois-ibc-protocol = { path = "../../packages/nois-ibc-protocol"}
+nois-protocol = { path = "../../packages/nois-protocol"}
 cosmwasm-std = { version = "1.1.0", features = ["iterator", "ibc3"] }
 cosmwasm-schema = { version = "1.1.0" }
 cw-storage-plus = { version = "0.14.0" }
