--- a/contracts/nois-terrand/Cargo.toml
+++ b/contracts/nois-terrand/Cargo.toml
@@ -28,7 +28,7 @@ overflow-checks = true
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-nois-ibc-protocol = { path = "../../packages/nois-ibc-protocol"}
+nois-protocol = { path = "../../packages/nois-protocol"}
 cosmwasm-std = { version = "1.1.0", features = ["iterator", "ibc3"] }
 cosmwasm-schema = { version = "1.1.0" }
 cw-storage-plus = { version = "0.14.0" }
