--- a/cd-scripts/relayer/Dockerfile
+++ b/cd-scripts/relayer/Dockerfile
@@ -3,8 +3,11 @@
 
 
 FROM node:latest
+
+ARG CHAIN_NAME
+
 RUN npm i -g @confio/relayer
 COPY nois-relayer-config.yaml /root/.ibc-setup/registry.yaml 
-RUN ibc-setup init --src uni --dest nois
+RUN ibc-setup init --src $CHAIN_NAME --dest nois
 
 CMD ["ibc-relayer", "start", "--src=uni", "--dest=nois", "--src-connection=connection-262", "--dest-connection=connection-1"]
