--- a/contracts/nois-oracle/Cargo.toml
+++ b/contracts/nois-oracle/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "nois-terrand"
+name = "nois-oracle"
 version = "0.1.0"
-authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
+authors = []
 edition = "2021"
 publish = false
 license = "Apache-2.0"
