--- a/contracts/nois-demo/Cargo.toml
+++ b/contracts/nois-demo/Cargo.toml
@@ -28,8 +28,7 @@ overflow-checks = true
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-nois-proxy = { path = "../../contracts/nois-proxy", features = ["library"]}
-nois-toolbox = { path = "../../packages/nois-toolbox" }
+nois = { path = "../../packages/nois" }
 cosmwasm-std = { version = "1.1.0", features = ["iterator"] }
 cosmwasm-schema = { version = "1.1.0" }
 cw-storage-plus = { version = "0.14.0" }
