--- a/contracts/nois-proxy/Cargo.toml
+++ b/contracts/nois-proxy/Cargo.toml
@@ -31,6 +31,7 @@ library = []
 
 [dependencies]
 nois-protocol = { path = "../../packages/nois-protocol"}
+nois = { path = "../../packages/nois"}
 cosmwasm-std = { version = "1.1.0", features = ["iterator", "ibc3"] }
 cosmwasm-schema = { version = "1.1.0" }
 cw-storage-plus = { version = "0.14.0" }
