--- a/packages/nois-protocol/Cargo.toml
+++ b/packages/nois-protocol/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+nois = { path = "../../packages/nois" }
 cosmwasm-std = { version = "1.1.0", features = ["ibc3"] }
 cosmwasm-schema = { version = "1.1.0" }
-hex = "0.4"
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
