--- a/packages/nois/Cargo.toml
+++ b/packages/nois/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nois-toolbox"
+name = "nois"
 version = "0.3.0"
 edition = "2021"
 
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 cosmwasm-std = { version = "1.1.0" }
+cosmwasm-schema = { version = "1.1.0" }
+hex = "0.4"
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
