--- a/packages/nois/Cargo.toml
+++ b/packages/nois/Cargo.toml
@@ -2,6 +2,8 @@
 name = "nois"
 version = "0.3.0"
 edition = "2021"
+license = "Apache-2.0"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
