--- a/contracts/nois-demo/Cargo.toml
+++ b/contracts/nois-demo/Cargo.toml
@@ -28,10 +28,10 @@ overflow-checks = true
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-nois = { path = "../../packages/nois" }
 cosmwasm-std = { version = "1.1.0", features = ["iterator"] }
 cosmwasm-schema = { version = "1.1.0" }
 cw-storage-plus = { version = "0.14.0" }
+nois = { git = "https://github.com/noislabs/nois.git", branch = "main" }
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
