--- a/cd-scripts/relayer/nois-relayer-config-template.yaml
+++ b/cd-scripts/relayer/nois-relayer-config-template.yaml
@@ -13,7 +13,7 @@ chains:
   TEMPLATE_RELAYER_CHAIN_NAME:
     chain_id: TEMPLATE_CHAIN_ID
     prefix: TEMPLATE_CHAIN_PREFIX
-    gas_price: 0.04TEMPLATE_CHAIN_DENOM
+    gas_price: TEMPLATE_GAS_PRICESTEMPLATE_CHAIN_DENOM
     hd_path: m/44'/118'/0'/0/0
     ics20_port: 'wasm.TEMPLATE_NOIS_PROXY_CONTRACT_ADDRESS' #junod query wasm contract  $NOIS_PROXY_CONTRACT_ADDRESS    --node=$NODE_URL
     faucet: TEMPLATE_CHAIN_FAUCET_URL
