--- a/cd-scripts/relayer/Dockerfile
+++ b/cd-scripts/relayer/Dockerfile
@@ -2,12 +2,12 @@
 #WARN!! This is only for testing the relayers not for production use
 
 
-FROM node:latest
+FROM node:18.8
 
 ARG CHAIN_NAME
 ARG NOIS_CHAIN_NAME
 
-RUN npm i -g @confio/relayer
+RUN npm i -g @confio/relayer@0.5.1
 COPY nois-relayer-config.yaml /root/.ibc-setup/registry.yaml 
 RUN ibc-setup init --src $CHAIN_NAME --dest $NOIS_CHAIN_NAME
 
