--- a/contracts/nois-oracle/Cargo.toml
+++ b/contracts/nois-oracle/Cargo.toml
@@ -29,7 +29,7 @@ backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
 nois-protocol = { path = "../../packages/nois-protocol"}
-nois = { git = "https://github.com/noislabs/nois.git", branch = "0.5-dev" }
+nois = "0.5.0"
 cosmwasm-std = { version = "1.1.0", features = ["iterator", "ibc3"] }
 cosmwasm-schema = { version = "1.1.0" }
 cw-storage-plus = { version = "0.14.0" }
