--- a/packages/nois-protocol/Cargo.toml
+++ b/packages/nois-protocol/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 cosmwasm-std = { version = "1.1.0", features = ["ibc3"] }
 cosmwasm-schema = { version = "1.1.0" }
-nois = { git = "https://github.com/noislabs/nois.git", branch = "0.5-dev" }
+nois = "0.5.0"
 schemars = "0.8.1"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
