--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ resolver = "2"
 [patch.crates-io]
 # cosmwasm-std = { git = "https://github.com/CosmWasm/cosmwasm", rev = "2e215cf" }
 # cosmwasm-schema = { git = "https://github.com/CosmWasm/cosmwasm", rev = "2e215cf" }
-nois = { git = "https://github.com/noislabs/nois", rev = "b71c505fdab347faf" }
+# nois = { git = "https://github.com/noislabs/nois", rev = "b71c505fdab347faf" }
 
 [profile.release.package.nois-proxy]
 codegen-units = 1
