--- a/contracts/nois-delegator/Cargo.toml
+++ b/contracts/nois-delegator/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "nois-oracle"
+name = "nois-delegator"
 version = "0.7.2"
 authors = []
 edition = "2021"
@@ -28,18 +28,11 @@ overflow-checks = true
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-nois-protocol = { path = "../../packages/nois-protocol"}
-nois-delegator = { path = "../nois-delegator"}
-nois = "0.5.1"
 cosmwasm-std = { version = "1.1.5", features = ["iterator", "ibc3"] }
 cosmwasm-schema = { version = "1.1.5" }
 cw-storage-plus = { version = "0.16.0" }
 schemars = "0.8.10"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
-
-# Drand dependencies
-hex = { version = "0.4" }
-drand-verify = "0.3.0"
 
 [dev-dependencies]
