--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ workflows:
       - contract_nois_demo
       - contract_nois_proxy
       - contract_nois_oracle
+      - contract_nois_delegator
       - package_nois_protocol
       - lint
       - wasm-build
@@ -18,6 +19,7 @@ workflows:
             - contract_nois_demo
             - contract_nois_proxy
             - contract_nois_oracle
+            - contract_nois_delegator
   deploy:
     jobs:
       - build_and_upload_contracts:
@@ -114,6 +116,33 @@ jobs:
             - /usr/local/cargo/registry
             - target
           key: cargocache-nois-oracle-rust:1.63.0-{{ checksum "~/project/Cargo.lock" }}
+
+  contract_nois_delegator:
+    docker:
+      - image: rust:1.63.0
+    working_directory: ~/project/contracts/nois-delegator
+    steps:
+      - checkout:
+          path: ~/project
+      - run:
+          name: Version information
+          command: rustc --version; cargo --version; rustup --version
+      - restore_cache:
+          keys:
+            - cargocache-nois-delegator-rust:1.63.0-{{ checksum "~/project/Cargo.lock" }}
+      - run:
+          name: Unit Tests
+          environment:
+            RUST_BACKTRACE: 1
+          command: cargo unit-test --locked
+      - run:
+          name: Build and run schema generator
+          command: cargo schema --locked
+      - save_cache:
+          paths:
+            - /usr/local/cargo/registry
+            - target
+          key: cargocache-nois-delegator-rust:1.63.0-{{ checksum "~/project/Cargo.lock" }}
 
   package_nois_protocol:
     docker:
