--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -239,6 +239,7 @@ jobs:
             - nois_demo.wasm
             - nois_proxy.wasm
             - nois_oracle.wasm
+            - nois_delegator.wasm
 
   ts-build:
     docker:
