--- a/contracts/nois-delegator/Cargo.toml
+++ b/contracts/nois-delegator/Cargo.toml
@@ -28,7 +28,7 @@ overflow-checks = true
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-cosmwasm-std = { version = "1.1.5", features = ["iterator", "ibc3", "staking"] }
+cosmwasm-std = { version = "1.1.5", features = ["staking"] }
 cosmwasm-schema = { version = "1.1.5" }
 cw-storage-plus = { version = "0.16.0" }
 schemars = "0.8.10"
