more-multitest-ci

--- a/contracts/multitest/Cargo.toml
+++ b/contracts/multitest/Cargo.toml
@@ -30,6 +30,7 @@ backtraces = ["cosmwasm-std/backtraces"]
 [dependencies]
 nois-delegator = { path = "../nois-delegator"}
 nois-oracle = { path = "../nois-oracle"}
+nois-proxy = { path = "../nois-proxy" }
 
 cosmwasm-std = { version = "1.1.5", features = ["iterator", "ibc3"] }
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
