--- a/contracts/nois-oracle/Cargo.toml
+++ b/contracts/nois-oracle/Cargo.toml
@@ -30,7 +30,7 @@ backtraces = ["cosmwasm-std/backtraces"]
 [dependencies]
 nois-protocol = { path = "../../packages/nois-protocol"}
 nois-delegator = { path = "../nois-delegator"}
-nois = "0.5.1"
+nois.workspace = true
 cosmwasm-std = { version = "1.1.5", features = ["iterator", "ibc3"] }
 cosmwasm-schema = { version = "1.1.5" }
 cw-storage-plus = { version = "0.16.0" }
