--- a/contracts/nois-proxy/Cargo.toml
+++ b/contracts/nois-proxy/Cargo.toml
@@ -34,7 +34,7 @@ nois-protocol = { path = "../../packages/nois-protocol"}
 cosmwasm-std = { version = "1.1.5", features = ["iterator", "ibc3"] }
 cosmwasm-schema = { version = "1.1.5" }
 cw-storage-plus = { version = "0.16.0" }
-nois = "0.5.1"
+nois.workspace = true
 schemars = "0.8.10"
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
