--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,7 @@ workflows:
     jobs:
       - contract_nois_demo
       - contract_nois_proxy
+      - contract_nois_monitoring
       - contract_nois_oracle
       - contract_nois_delegator
       - cw-multitest
@@ -19,6 +20,7 @@ workflows:
             - ts-build
             - contract_nois_demo
             - contract_nois_proxy
+            - contract_nois_monitoring
             - contract_nois_oracle
             - contract_nois_delegator
   deploy:
@@ -90,6 +92,34 @@ jobs:
             - /usr/local/cargo/registry
             - target
           key: cargocache-nois-proxy-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
+
+  contract_nois_monitoring:
+    docker:
+      - image: rust:1.65.0
+    working_directory: ~/project/contracts/nois-monitoring
+    steps:
+      - checkout:
+          path: ~/project
+      - run:
+          name: Version information
+          command: rustc --version; cargo --version; rustup --version
+      - restore_cache:
+          keys:
+            - cargocache-nois-monitoring-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
+            - cargocache-nois-monitoring-rust:1.65.0-
+      - run:
+          name: Unit Tests
+          environment:
+            RUST_BACKTRACE: 1
+          command: cargo unit-test --locked
+      - run:
+          name: Build and run schema generator
+          command: cargo schema --locked
+      - save_cache:
+          paths:
+            - /usr/local/cargo/registry
+            - target
+          key: cargocache-nois-monitoring-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
 
   contract_nois_oracle:
     docker:
