--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,11 +12,11 @@ workflows:
       - cw-multitest
       - package_nois_protocol
       - lint
-      - wasm-build
+      - wasm_build
       - ts-build
       - integration:
           requires:
-            - wasm-build
+            - wasm_build
             - ts-build
             - contract_nois_demo
             - contract_nois_proxy
@@ -51,7 +51,8 @@ jobs:
           command: rustc --version; cargo --version; rustup --version
       - restore_cache:
           keys:
-            - v2-nois-demo-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-contract_nois_demo-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-contract_nois_demo-rust:1.65.0-
       - run:
           name: Unit Tests
           environment:
@@ -66,7 +67,7 @@ jobs:
             - ~/project/target/debug/.fingerprint
             - ~/project/target/debug/build
             - ~/project/target/debug/deps
-          key: v2-nois-demo-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
+          key: v2-contract_nois_demo-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
 
   contract_nois_proxy:
     docker:
@@ -80,7 +81,8 @@ jobs:
           command: rustc --version; cargo --version; rustup --version
       - restore_cache:
           keys:
-            - v2-nois-proxy-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-contract_nois_proxy-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-contract_nois_proxy-rust:1.65.0-
       - run:
           name: Unit Tests
           environment:
@@ -95,7 +97,7 @@ jobs:
             - ~/project/target/debug/.fingerprint
             - ~/project/target/debug/build
             - ~/project/target/debug/deps
-          key: v2-nois-proxy-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
+          key: v2-contract_nois_proxy-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
 
   contract_nois_monitoring:
     docker:
@@ -109,8 +111,8 @@ jobs:
           command: rustc --version; cargo --version; rustup --version
       - restore_cache:
           keys:
-            - v2-nois-monitoring-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
-            - v2-nois-monitoring-rust:1.65.0-
+            - v2-contract_nois_monitoring-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-contract_nois_monitoring-rust:1.65.0-
       - run:
           name: Unit Tests
           environment:
@@ -125,7 +127,7 @@ jobs:
             - ~/project/target/debug/.fingerprint
             - ~/project/target/debug/build
             - ~/project/target/debug/deps
-          key: v2-nois-monitoring-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
+          key: v2-contract_nois_monitoring-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
 
   contract_nois_oracle:
     docker:
@@ -139,7 +141,8 @@ jobs:
           command: rustc --version; cargo --version; rustup --version
       - restore_cache:
           keys:
-            - v2-nois-oracle-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-contract_nois_oracle-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-contract_nois_oracle-rust:1.65.0-
       - run:
           name: Unit Tests
           environment:
@@ -154,7 +157,7 @@ jobs:
             - ~/project/target/debug/.fingerprint
             - ~/project/target/debug/build
             - ~/project/target/debug/deps
-          key: v2-nois-oracle-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
+          key: v2-contract_nois_oracle-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
 
   contract_nois_delegator:
     docker:
@@ -169,6 +172,7 @@ jobs:
       - restore_cache:
           keys:
             - v2-contract_nois_delegator-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-contract_nois_delegator-rust:1.65.0-
       - run:
           name: Unit Tests
           environment:
@@ -207,6 +211,7 @@ jobs:
       - restore_cache:
           keys:
             - v2-package_nois_protocol-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-package_nois_protocol-rust:1.65.0-
       - run:
           name: Build library for native target
           command: cargo build --locked
@@ -232,6 +237,7 @@ jobs:
       - restore_cache:
           keys:
             - v2-lint-rust:1.65.0-{{ checksum "Cargo.lock" }}
+            - v2-lint-rust:1.65.0-
       - run:
           name: Add rustfmt component
           command: rustup component add rustfmt
@@ -256,7 +262,7 @@ jobs:
   # We don't run the wasm build per contract build, and then reuse a lot of the same dependencies, so this speeds up CI time
   # for all the other tests.
   # Resulting wasm files are stored to the workspace, so they can be used by the integration test downstream
-  wasm-build:
+  wasm_build:
     docker:
       - image: rust:1.65.0
     steps:
@@ -267,7 +273,8 @@ jobs:
           command: rustc --version; cargo --version; rustup --version
       - restore_cache:
           keys:
-            - v2-wasm-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-wasm_build-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-wasm_build-rust:1.65.0-
       - run:
           name: Add wasm32 target
           command: rustup target add wasm32-unknown-unknown
@@ -283,7 +290,7 @@ jobs:
           paths:
             - /usr/local/cargo/registry
             - ~/project/target
-          key: v2-wasm-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
+          key: v2-wasm_build-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
       - persist_to_workspace:
           name: Save wasm contracts for integration test usage
           root: ./target/wasm32-unknown-unknown/release
