--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,11 @@ nois = { git = "https://github.com/noislabs/nois", rev = "v0.6.0-beta.0" }
 # cosmwasm-std = { git = "https://github.com/CosmWasm/cosmwasm", rev = "2e215cf" }
 # cosmwasm-schema = { git = "https://github.com/CosmWasm/cosmwasm", rev = "2e215cf" }
 
-[profile.release.package.nois-proxy]
+[profile.release.package.nois-protocol]
+codegen-units = 1
+incremental = false
+
+[profile.release.package.multitest]
 codegen-units = 1
 incremental = false
 
@@ -18,5 +22,6 @@ rpath = false
 lto = true
 overflow-checks = true
 opt-level = 3
+panic = 'abort'
 debug = false
 debug-assertions = false
