--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ workflows:
   test:
     jobs:
       - contract_nois_demo
+      - contract_nois_drand
       - contract_nois_proxy
       - contract_nois_monitoring
       - contract_nois_oracle
