--- a/packages/multitest/Cargo.toml
+++ b/packages/multitest/Cargo.toml
@@ -18,6 +18,7 @@ backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
 nois-delegator = { path = "../../contracts/nois-delegator"}
+nois-drand = { path = "../../contracts/nois-drand"}
 nois-oracle = { path = "../../contracts/nois-oracle"}
 nois-proxy = { path = "../../contracts/nois-proxy" }
 
