--- a/packages/multitest/Cargo.toml
+++ b/packages/multitest/Cargo.toml
@@ -19,7 +19,7 @@ backtraces = ["cosmwasm-std/backtraces"]
 [dependencies]
 nois-delegator = { path = "../../contracts/nois-delegator"}
 nois-drand = { path = "../../contracts/nois-drand"}
-nois-oracle = { path = "../../contracts/nois-oracle"}
+nois-gateway = { path = "../../contracts/nois-oracle"}
 nois-proxy = { path = "../../contracts/nois-proxy" }
 
 cosmwasm-std = { version = "1.1.5", features = ["iterator", "ibc3"] }
