--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,9 @@ workflows:
       - contract_nois_demo
       - contract_nois_drand
       - contract_nois_gateway
+      - contract_nois_icecube
       - contract_nois_proxy
       - contract_nois_monitoring
-      - contract_nois_delegator
       - cw-multitest
       - package_nois_protocol
       - lint
@@ -20,10 +20,10 @@ workflows:
             - wasm_build
             - ts-build
             - contract_nois_demo
+            - contract_nois_gateway
+            - contract_nois_icecube
             - contract_nois_proxy
             - contract_nois_monitoring
-            - contract_nois_gateway
-            - contract_nois_delegator
   deploy:
     jobs:
       - build_and_upload_contracts:
@@ -190,10 +190,10 @@ jobs:
             - ~/project/target/debug/deps
           key: v2-contract_nois_drand-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
 
-  contract_nois_delegator:
+  contract_nois_icecube:
     docker:
       - image: rust:1.65.0
-    working_directory: ~/project/contracts/nois-delegator
+    working_directory: ~/project/contracts/nois-icecube
     steps:
       - checkout:
           path: ~/project
@@ -202,8 +202,8 @@ jobs:
           command: rustc --version; cargo --version; rustup --version
       - restore_cache:
           keys:
-            - v2-contract_nois_delegator-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
-            - v2-contract_nois_delegator-rust:1.65.0-
+            - v2-contract_nois_icecube-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
+            - v2-contract_nois_icecube-rust:1.65.0-
       - run:
           name: Unit Tests
           environment:
@@ -218,7 +218,7 @@ jobs:
             - ~/project/target/debug/.fingerprint
             - ~/project/target/debug/build
             - ~/project/target/debug/deps
-          key: v2-contract_nois_delegator-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
+          key: v2-contract_nois_icecube-rust:1.65.0-{{ checksum "~/project/Cargo.lock" }}
 
   cw-multitest:
     docker:
@@ -328,9 +328,9 @@ jobs:
           paths:
             - nois_demo.wasm
             - nois_drand.wasm
+            - nois_icecube.wasm
             - nois_proxy.wasm
             - nois_gateway.wasm
-            - nois_delegator.wasm
 
   ts-build:
     docker:
