--- a/packages/multitest/Cargo.toml
+++ b/packages/multitest/Cargo.toml
@@ -17,9 +17,9 @@ crate-type = ["cdylib", "rlib"]
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-nois-delegator = { path = "../../contracts/nois-delegator"}
 nois-drand = { path = "../../contracts/nois-drand"}
 nois-gateway = { path = "../../contracts/nois-gateway"}
+nois-icecube = { path = "../../contracts/nois-icecube"}
 nois-proxy = { path = "../../contracts/nois-proxy" }
 
 cosmwasm-std = { version = "1.1.5", features = ["iterator", "ibc3"] }
