--- a/contracts/nois-sink/Cargo.toml
+++ b/contracts/nois-sink/Cargo.toml
@@ -17,15 +17,11 @@ crate-type = ["cdylib", "rlib"]
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-cosmwasm-std = { version = "1.2.1", features = ["iterator", "ibc3"] }
+cosmwasm-std = { version = "1.2.1", features = ["iterator"] }
 cosmwasm-schema = { version = "1.2.1" }
 cw-storage-plus = { version = "1.0.0" }
+nois.workspace = true
 serde = { version = "1.0.103", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.23" }
 
-# Drand dependencies
-hex = { version = "0.4" }
-drand-verify = "0.4.0"
-
 [dev-dependencies]
-sha2 = "0.10.6"
